[gd_scene load_steps=19 format=3 uid="uid://df2sfbj8mbors"]

[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_6x5al"]
[ext_resource type="PackedScene" uid="uid://bo57tbby6sxkf" path="res://Objects/Platform.tscn" id="1_y8iq0"]
[ext_resource type="PackedScene" uid="uid://hww1372w4s0v" path="res://Objects/TileOcean.tscn" id="2_5ig4s"]
[ext_resource type="PackedScene" uid="uid://cjlr5r2gwcxwc" path="res://Objects/Player.tscn" id="2_7lyps"]
[ext_resource type="Texture2D" uid="uid://i0ds3227rswd" path="res://Sauce/Environment/Yellow.png" id="3_hop2s"]
[ext_resource type="Script" path="res://Scripts/PlatformParent.gd" id="4_auiaa"]
[ext_resource type="Script" path="res://Scripts/PlatformEater.gd" id="4_p02oo"]
[ext_resource type="Script" path="res://Scripts/DeathArea.gd" id="5_kafu7"]
[ext_resource type="PackedScene" uid="uid://bkxnekbujyuxb" path="res://Objects/Enemy.tscn" id="6_iav7x"]
[ext_resource type="Theme" uid="uid://ckls3n86lwtw4" path="res://Sauce/Theme/Theme1.tres" id="8_pv6hy"]
[ext_resource type="PackedScene" uid="uid://cmraoiypjplne" path="res://Objects/Lives.tscn" id="9_2ghhw"]
[ext_resource type="FontFile" uid="uid://bttr0fcrlc31l" path="res://Sauce/Theme/UbuntuMono-B.ttf" id="9_hp3cy"]

[sub_resource type="Animation" id="Animation_eudxr"]
resource_name = "Parallax"
length = 5.00001
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ocean4:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 384, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ocean4:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, 0, 0, 0, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ocean3:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 256, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Ocean3:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(52, 0, 52, 0, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Ocean2:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 128, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 5)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Ocean2:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(124, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_ardii"]
resource_name = "Stop"
length = 0.10001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ocean4:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ocean4:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, 0, 0, 0, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ocean3:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Ocean3:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(52, 0, 0, 0, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Ocean2:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Ocean2:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(124, 0, 0, 0, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qxy7x"]
_data = {
"Parallax": SubResource("Animation_eudxr"),
"Stop": SubResource("Animation_ardii")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p4ca1"]
size = Vector2(89, 910)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_13cge"]
size = Vector2(1181, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3pd0i"]
size = Vector2(46, 676)

[node name="Game" type="Node2D"]
process_mode = 1
script = ExtResource("1_6x5al")

[node name="Ocean2" parent="." instance=ExtResource("2_5ig4s")]
position = Vector2(0, 124)
layer_0/tile_data = PackedInt32Array(327679, 2, 1, 393215, 3, 1, 262144, 2, 1, 327680, 3, 1, 262145, 2, 1, 327681, 3, 1, 262146, 2, 1, 327682, 3, 1, 262147, 2, 1, 327683, 3, 1, 262148, 2, 1, 327684, 3, 1, 262149, 2, 1, 327685, 3, 1, 262150, 2, 1, 327686, 3, 1, 262151, 2, 1, 327687, 3, 1, 262152, 2, 1, 327688, 3, 1, 262153, 2, 1, 327689, 3, 1, 262154, 2, 1, 327678, 2, 1, 393214, 3, 1, 327690, 3, 1, 262142, 1, 1, 262143, 1, 1, 196608, 1, 1, 196609, 1, 1, 196610, 1, 1, 196611, 1, 1, 196612, 1, 1, 196613, 1, 1, 196614, 1, 1, 196615, 1, 1, 196616, 1, 1, 196617, 1, 1, 196618, 1, 1, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0)

[node name="Ocean3" parent="." instance=ExtResource("2_5ig4s")]
position = Vector2(0, 52)
layer_0/tile_data = PackedInt32Array(327679, 2, 1, 393215, 3, 1, 262144, 2, 1, 327680, 3, 1, 262145, 2, 1, 327681, 3, 1, 262146, 2, 1, 327682, 3, 1, 262147, 2, 1, 327683, 3, 1, 262148, 2, 1, 327684, 3, 1, 262149, 2, 1, 327685, 3, 1, 262150, 2, 1, 327686, 3, 1, 262151, 2, 1, 327687, 3, 1, 262152, 2, 1, 327688, 3, 1, 262153, 2, 1, 327689, 3, 1, 262154, 2, 1, 327678, 2, 1, 393214, 3, 1, 327690, 3, 1, 262142, 2, 0, 262143, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 262141, 2, 0, 327677, 2, 1, 262140, 2, 0, 327676, 2, 1, 262139, 2, 0, 327675, 2, 1, 262138, 2, 0, 327674, 2, 1)

[node name="Ocean4" parent="." instance=ExtResource("2_5ig4s")]
layer_0/tile_data = PackedInt32Array(327679, 3, 0, 393215, 3, 1, 262144, 3, 0, 327680, 3, 1, 262145, 3, 0, 327681, 3, 1, 262146, 3, 0, 327682, 3, 1, 262147, 3, 0, 327683, 3, 1, 262148, 3, 0, 327684, 3, 1, 262149, 3, 0, 327685, 3, 1, 262150, 3, 0, 327686, 3, 1, 262151, 3, 0, 327687, 3, 1, 262152, 3, 0, 327688, 3, 1, 262153, 3, 0, 327689, 3, 1, 262154, 3, 0, 327678, 3, 0, 393214, 3, 1, 327690, 3, 1, 327677, 3, 0, 393213, 3, 1, 327676, 3, 0, 393212, 3, 1, 327675, 3, 0, 393211, 3, 1, 327674, 3, 0, 393210, 3, 1)

[node name="Sky" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(577, 263)
scale = Vector2(19.0313, 9.21875)
texture = ExtResource("3_hop2s")

[node name="ParallaxPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qxy7x")
}

[node name="Countdown" type="Timer" parent="."]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Bounds" type="Node2D" parent="."]

[node name="Left" type="StaticBody2D" parent="Bounds"]
position = Vector2(-51, 444)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Left"]
shape = SubResource("RectangleShape2D_p4ca1")

[node name="Left2" type="Area2D" parent="Bounds"]
position = Vector2(-114, 445)
collision_layer = 0
collision_mask = 6
script = ExtResource("5_kafu7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Left2"]
shape = SubResource("RectangleShape2D_p4ca1")

[node name="Right" type="StaticBody2D" parent="Bounds"]
position = Vector2(1204, 444)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Right"]
shape = SubResource("RectangleShape2D_p4ca1")

[node name="Up" type="StaticBody2D" parent="Bounds"]
position = Vector2(574, -82)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Up"]
shape = SubResource("RectangleShape2D_13cge")

[node name="Down" type="Area2D" parent="Bounds"]
position = Vector2(579, 814)
collision_layer = 0
collision_mask = 6
script = ExtResource("5_kafu7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Down"]
shape = SubResource("RectangleShape2D_13cge")

[node name="Enemy" parent="." instance=ExtResource("6_iav7x")]
position = Vector2(1437, 387)

[node name="PlatformEater" type="Area2D" parent="."]
position = Vector2(152, 0)
collision_layer = 0
script = ExtResource("4_p02oo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformEater"]
position = Vector2(-539, 328)
shape = SubResource("RectangleShape2D_3pd0i")
debug_color = Color(1, 1, 0, 0.419608)

[node name="PlatformSpeedUp" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Platforms" type="Node2D" parent="."]
position = Vector2(1429, 309)
script = ExtResource("4_auiaa")

[node name="Platform" parent="Platforms" instance=ExtResource("1_y8iq0")]
position = Vector2(-420, 0)

[node name="Platform3" parent="Platforms" instance=ExtResource("1_y8iq0")]
position = Vector2(-840, 0)

[node name="Platform4" parent="Platforms" instance=ExtResource("1_y8iq0")]
position = Vector2(-1260, 0)

[node name="Platform2" parent="Platforms" instance=ExtResource("1_y8iq0")]
position = Vector2(0, 150)

[node name="Player" parent="." instance=ExtResource("2_7lyps")]
position = Vector2(119, 109)
scale = Vector2(3, 3)

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="GameUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_pv6hy")

[node name="Score" type="Label" parent="GameUI/Control"]
layout_mode = 2
offset_left = 41.0
offset_top = 583.0
offset_right = 143.0
offset_bottom = 629.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.309804)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("9_hp3cy")
theme_override_font_sizes/font_size = 40
text = "00000"
vertical_alignment = 1

[node name="Timer" type="Label" parent="GameUI/Control"]
layout_mode = 2
offset_left = 170.0
offset_top = 583.0
offset_right = 272.0
offset_bottom = 629.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.309804)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("9_hp3cy")
theme_override_font_sizes/font_size = 40
text = "00:00"
vertical_alignment = 1

[node name="Lives" parent="GameUI/Control" instance=ExtResource("9_2ghhw")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 300.0
offset_top = -68.0
offset_right = 300.0
offset_bottom = -68.0
grow_vertical = 0
scale = Vector2(0.75, 0.75)

[connection signal="timeout" from="Countdown" to="." method="CountTime"]
[connection signal="body_entered" from="Bounds/Left2" to="Bounds/Left2" method="_on_body_entered"]
[connection signal="body_entered" from="Bounds/Down" to="Bounds/Down" method="_on_body_entered"]
[connection signal="body_entered" from="PlatformEater" to="PlatformEater" method="_on_body_entered"]
[connection signal="timeout" from="PlatformSpeedUp" to="Platforms" method="GoFaster"]
